# LLM-Support-Tools

./: .gitignore  RLHF_data_for_sentiment.json  langchain_generated_amazon_preferences.json  main.py  requirements.txt
AWS/: AWS_Practice.ipynb  ECR2.py  S3.py
LangChain/: WebSearchAgent.py  main.py  pyproject.toml
LangChain ReAct Agent/: 2.WebSearchReActAgent.py  Schemas.py  main.py  pyproject.toml  requirements.txt
Pydantic/: README.md  api_call_pydantic.py  api_call_pydantic_llama.py  pydantic_basics.py  retry_pydantic_with_llm.py  tool_calling.py  tool_calling_gpt.py
SFT_and_RLHF/: for_rlhf_data_gen.py  rlhf.py  sft&rlhf.py  test_sft.py
SFT_and_RLHF/FineTuneSrc/: ppo.py  rm.py  sft.py
