[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
